# python-tips-and-tricks

./: .gitignore  README.md  app.db  database.py  enums.py  main.py  models.py  pyproject.toml  schemas.py  snippets.json  utils.py
crud/: posts.py  users.py
routers/: posts.py  users.py
static/css/: main.css  utils.css  variables.css
static/js/: scripts.js
templates/: error.html  home.html  layout.html  navbar.html  post.html  sidebar.html  user_posts.html
test/: test_db_tags.py
